Bug 166849 - Cannot select slide thumb nail and display in main view pane in Impress
Summary: Cannot select slide thumb nail and display in main view pane in Impress
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.3.2 release
Hardware: All Linux (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: accessibility, bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-06-03 21:34 UTC by rhimbo
Modified: 2025-06-17 11:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen cast demonstrating the problem reordering slide thumb nails (364.39 KB, video/webm)
2025-06-04 16:58 UTC, rhimbo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rhimbo 2025-06-03 21:34:44 UTC
Description:
After moving slides (relocate a slide to a different position in the slide sequence), I cannot select the slide thumb nail (left "Slides" pane).  Clicking on the slide does not display the slide in the main slide display pane. 




Steps to Reproduce:
1. Open a .odp file via the Libre Office Impress application 

2. Move a slide to a different position (slide order) in the Impress document.  Hit Alt-Shift-Up Arrow or Alt-Shift-Down Arrow to reposition the slide.

3.  Click on that slide just moved or click another slide in the left side "Slides" pane.



Actual Results:
There is no indication (blue background highlight) that the slide thumb nail was selected. 

The selected slide does not display in the main view pane. 


Expected Results:
The selected slide should be rendered with a highlight (blue highlight background).
The selected slide should be displayed in the main view pane.



Reproducible: Sometimes


User Profile Reset: No

Additional Info:
This bug is easily reproducible.  

I can fix by closing the Impress document and then re-opening it.

Note that in 25.2.3.2 click-and-drag does not work to re-order slides.  I reported this bug separately a while back.  

I suspect there is a general problem with slide re-ordering. 

Version: 25.2.3.2 (X86_64)
Build ID: 520(Build:2)
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: kf6 (cairo+wayland)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Regina Henschel 2025-06-04 00:00:34 UTC
I cannot confirm it. Tested with Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 3158b14e0b26875300a8098bc117a5e69b76f48f
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

I have some questions:
Do you use the default names for your slides?
Is the presentation an import from pptx?
Do you see the same problem when you do not use the Slide Pane but the Slide Sorter?
Comment 2 rhimbo 2025-06-04 00:57:13 UTC
1.  Yes, I use the default names for slides.  I am not renaming my slides.

2.  No, the presentation is native .odp

3.  How do I sort (re-order) slides without using the slide thumb nail pane?

It's very easy to reproduce.  If I move a slide more than a few positions, the problem occurs almost 100% of the time.  If I just move a slide one position forward or backward the problem does not occur.

It's different each time.  But generally there will be several slides which I cannot "select" by clicking following moving a slide.
Comment 3 Regina Henschel 2025-06-04 09:10:34 UTC
Now I can confirm it for Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 3158b14e0b26875300a8098bc117a5e69b76f48f
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded


It only happens, when you move the thumbnail with Alt+Shift+Up or Alt+Shift+Down. It does not happen, when you move the thumbnail by dragging with the mouse.

(In reply to pihuatan from comment #2)
> 3.  How do I sort (re-order) slides without using the slide thumb nail pane?

Open the Slide Sorter via menu View > Slide Sorter. Back with menu View > Normal.

The error occurs too in Slide Sorter when using the commands .uno:MovePageUp or .uno:MovePageDown

Workaround: Drag the thumbnails with the mouse. In Slide Sorter this is even comfortable for large distances.

I have added accessibility keyword, because Alt+Shift+Up and Alt+Shift+Down are needed for working without mouse, which is a promise of LibreOffice.
Comment 4 Michael Weghorn 2025-06-04 12:01:10 UTC
(In reply to pihuatan from comment #0)
> Steps to Reproduce:
> 1. Open a .odp file via the Libre Office Impress application 
> 
> 2. Move a slide to a different position (slide order) in the Impress
> document.  Hit Alt-Shift-Up Arrow or Alt-Shift-Down Arrow to reposition the
> slide.

For me, nothing happens when I press Alt+Shift+Up_arrow or Alt+Shift+Down_arrow, neither in the "Slides" pane, nor in the dedicated "View" -> "Slide Sorter". Just to be sure I'm trying the right thing, can you please attach a screencast of the issue?


> Note that in 25.2.3.2 click-and-drag does not work to re-order slides.  I
> reported this bug separately a while back.

That should be fixed in the meanwhile, see tdf#164380.


Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 37ca6715d0df17054d8d8e627ea88c96db67190b
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded

Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 616a3177da38d3db342593149ab2a9a94799cfe8
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded

Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 616a3177da38d3db342593149ab2a9a94799cfe8
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 5 Regina Henschel 2025-06-04 12:10:53 UTC
(In reply to Michael Weghorn from comment #4)
> (In reply to pihuatan from comment #0)
> > Steps to Reproduce:
> > 1. Open a .odp file via the Libre Office Impress application 
> > 
> > 2. Move a slide to a different position (slide order) in the Impress
> > document.  Hit Alt-Shift-Up Arrow or Alt-Shift-Down Arrow to reposition the
> > slide.
> 
> For me, nothing happens when I press Alt+Shift+Up_arrow or
> Alt+Shift+Down_arrow, neither in the "Slides" pane, nor in the dedicated
> "View" -> "Slide Sorter". Just to be sure I'm trying the right thing, can
> you please attach a screencast of the issue?

No, not "Up_arrow" but "Page up", German "Bild auf".
Comment 6 Regina Henschel 2025-06-04 12:47:36 UTC
It works in Version: Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

The bug can be seen in Version: 25.2.1.2 (X86_64) / LibreOffice Community
Build ID: d3abf4aee5fd705e4a92bba33a32f40bc4e56f49
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

Thus adding 'regression'.
Comment 7 rhimbo 2025-06-04 16:56:40 UTC
(In reply to Regina Henschel from comment #5)
> (In reply to Michael Weghorn from comment #4)
> > (In reply to pihuatan from comment #0)
> > > Steps to Reproduce:
> > > 1. Open a .odp file via the Libre Office Impress application 
> > > 
> > > 2. Move a slide to a different position (slide order) in the Impress
> > > document.  Hit Alt-Shift-Up Arrow or Alt-Shift-Down Arrow to reposition the
> > > slide.
> > 
> > For me, nothing happens when I press Alt+Shift+Up_arrow or
> > Alt+Shift+Down_arrow, neither in the "Slides" pane, nor in the dedicated
> > "View" -> "Slide Sorter". Just to be sure I'm trying the right thing, can
> > you please attach a screencast of the issue?
> 
> No, not "Up_arrow" but "Page up", German "Bild auf".

Correct; my mistake in my original filing.

The key combination is Alt+Page UP or Alt+Page Down.

Clicking and dragging a slide thumb nail _does not_ work at all.  I reported this previously but I can't find the bug number now.
Comment 8 rhimbo 2025-06-04 16:58:12 UTC
Created attachment 201100 [details]
Screen cast demonstrating the problem reordering slide thumb nails
Comment 9 rhimbo 2025-06-04 16:59:48 UTC
(In reply to Michael Weghorn from comment #4)
> (In reply to pihuatan from comment #0)
> > Steps to Reproduce:
> > 1. Open a .odp file via the Libre Office Impress application 
> > 
> > 2. Move a slide to a different position (slide order) in the Impress
> > document.  Hit Alt-Shift-Up Arrow or Alt-Shift-Down Arrow to reposition the
> > slide.
> 
> For me, nothing happens when I press Alt+Shift+Up_arrow or
> Alt+Shift+Down_arrow, neither in the "Slides" pane, nor in the dedicated
> "View" -> "Slide Sorter". Just to be sure I'm trying the right thing, can
> you please attach a screencast of the issue?
> 
> 
> > Note that in 25.2.3.2 click-and-drag does not work to re-order slides.  I
> > reported this bug separately a while back.
> 
> That should be fixed in the meanwhile, see tdf#164380.
> 
> 
> Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
> Build ID: 37ca6715d0df17054d8d8e627ea88c96db67190b
> CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render:
> Skia/Raster; VCL: win
> Locale: en-US (en_DE); UI: en-US
> Calc: threaded
> 
> Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
> Build ID: 616a3177da38d3db342593149ab2a9a94799cfe8
> CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: gtk3
> Locale: en-GB (en_GB.UTF-8); UI: en-US
> Calc: CL threaded
> 
> Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
> Build ID: 616a3177da38d3db342593149ab2a9a94799cfe8
> CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
> Locale: en-GB (en_GB.UTF-8); UI: en-US
> Calc: CL threaded

I uploaded a screen cast....
Comment 10 Michael Weghorn 2025-06-04 19:38:57 UTC
(In reply to Regina Henschel from comment #5)
> No, not "Up_arrow" but "Page up", German "Bild auf".

Thanks to both of you for clarification + screencast. With PageUp/PageDown, I can indeed reproduce this as well.

(In reply to pihuatan from comment #7)
> Clicking and dragging a slide thumb nail _does not_ work at all.  I reported
> this previously but I can't find the bug number now.

See tdf#164380: This is fixed in the upcoming version 25.2.4, to be released later this week, while your version information from comment 0 mentions version 25.2.3.2 that doesn't have the fix yet. If you still see this with 25.2.4 or later, please open a new bug report (and feel free to add me in CC).


Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 616a3177da38d3db342593149ab2a9a94799cfe8
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 11 Michael Weghorn 2025-06-04 19:52:08 UTC
Bibisected with the gen VCL plugin and linux-64-25.2 bibisect repo to:

    commit 99db40d5478d06d33e2d6f05011df278aea4682b
    Author: Jenkins Build User <tdf@maggie.tdf>
    Date:   Fri Sep 6 15:17:51 2024 +0200

        source ad3fa69eeb89573c77feba64dab3380154a90953

which is source commit

    commit ad3fa69eeb89573c77feba64dab3380154a90953
    Author: Noel Grandin
    Date:   Fri Sep 6 12:55:26 2024 +0200

        reduce time spent in RecalcPageNums when importing PDF

CC: to Noel Grandin, can you please take a look?
Comment 12 rhimbo 2025-06-04 20:06:17 UTC
(In reply to Michael Weghorn from comment #10)
> (In reply to Regina Henschel from comment #5)
> > No, not "Up_arrow" but "Page up", German "Bild auf".
> 
> Thanks to both of you for clarification + screencast. With PageUp/PageDown,
> I can indeed reproduce this as well.
> 
> (In reply to pihuatan from comment #7)
> > Clicking and dragging a slide thumb nail _does not_ work at all.  I reported
> > this previously but I can't find the bug number now.
> 
> See tdf#164380: This is fixed in the upcoming version 25.2.4, to be released
> later this week, while your version information from comment 0 mentions
> version 25.2.3.2 that doesn't have the fix yet. If you still see this with
> 25.2.4 or later, please open a new bug report (and feel free to add me in
> CC).
> 
> 
> Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
> Build ID: 616a3177da38d3db342593149ab2a9a94799cfe8
> CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
> Locale: en-GB (en_GB.UTF-8); UI: en-US
> Calc: CL threaded

Great.  Thank you....
Comment 13 Noel Grandin 2025-06-13 20:37:30 UTC
fixed by https://gerrit.libreoffice.org/c/core/+/186472
Comment 14 Michael Weghorn 2025-06-16 07:37:36 UTC
Thanks, Noel!

Fix verified with

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 10b7f18b9832e9f7761814ea9baeba1e921dca88
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 15 Commit Notification 2025-06-16 09:26:40 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/be7ca6ab992406afc7841c33c7a6d8bfb4795185

tdf#166849 moving slide with keyboard does not update display

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2025-06-17 11:54:13 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/441ed44f3ce3904345da1983f0ccdf2a9c79632a

tdf#166849 moving slide with keyboard does not update display

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.