tdf#166849 moving slide with keyboard does not update display

regression from
    commit ad3fa69eeb89573c77feba64dab3380154a90953
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Sep 6 12:55:26 2024 +0200
    reduce time spent in RecalcPageNums when importing PDF

Change-Id: Ic5b2e73a7871f2a89cbd38bef91ad09152304d56
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186472
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit cc99f7736e10c8290d34eeb96aa6a3b7fd63a212)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186542
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>